cmake_minimum_required(VERSION 3.10)
project(control)

if(NOT CMAKE_CXX_STANDARD)
  set(CMAKE_CXX_STANDARD 17)
endif()

find_package(ament_cmake REQUIRED)
find_package(rclcpp REQUIRED)
find_package(nav_msgs REQUIRED)
find_package(geometry_msgs REQUIRED)

add_library(control_lib
  src/control_core.cpp)

target_include_directories(control_lib
  PUBLIC include)

ament_target_dependencies(control_lib
  rclcpp
  nav_msgs
  geometry_msgs
)

add_executable(control_node src/control_node.cpp)
target_link_libraries(control_node control_lib)

install(TARGETS
  control_node
  DESTINATION lib/${PROJECT_NAME})

ament_package()