<?xml version="1.0"?>
<package format="3">
  <name>map_memory</name>
  <version>0.0.0</version>
  <description>Map memory package</description>
  <maintainer email="student@example.com">Student</maintainer>
  <license>Apache2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <depend>rclcpp</depend>
  <depend>nav_msgs</depend>
  
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>